--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -6,7 +6,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.2.0/jquery.fancybox.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.2.0/jquery.fancybox.min.css">
-    <title>Golden Era Grooves</title>
+    <title>Golden Era Grooves - Where the music begins</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <link
