--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -24,7 +24,10 @@
     <div class="title-bar">
       <div class="title-bar-text">Golden Era Grooves</div>
     </div>
+
     <div id="root"></div>
+    <div id="overlay"></div>
+
     <script src="https://widget.flowxo.com/embed.js" data-fxo-widget="eyJ0aGVtZSI6IiMyMTRmZTgiLCJ3ZWIiOnsiYm90SWQiOiI2NTNlZDg3NmM0ZmQ4YjAwNjlhNjQ5YTQiLCJ0aGVtZSI6IiMyMTRmZTgiLCJsYWJlbCI6IldlbGNvbWUgdG8gR29sZGVuIEVyYSBHcm9vdmVzIn0sInBvcHVwSGVpZ2h0IjoiNTAlIn0=" async defer></script>
 
 
